syntax = "proto3";
package rofi.messages;

import "jointCmd.proto";

message JointResp {
    JointCmd.Type cmdType = 1;
    int32 joint = 2;

    repeated float values = 3;
}
